--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -833,10 +833,13 @@ select option
 /*********************************
 3.3 Main Navigation
 *********************************/
-
+#row_1
+{
+    left: 2%;
+}
 .main_nav
 {
-	width: 100%;
+	width: 80%;
 	border-top: solid 1px #f2f2f2;
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
 	background: #FFFFFF;
@@ -859,7 +862,7 @@ select option
 }
 .cat_menu_container
 {
-	width: 10%;
+	width: 100%;
 	height: 100%;
 	background: #0e8ce4;
 	padding-left: 35px;
@@ -868,6 +871,7 @@ select option
 }
 .cat_menu_title
 {
+
 	height: 100%;
 }
 .cat_burger
@@ -2077,7 +2081,7 @@ select option
 .banner_2
 {
 	width: 100%;
-    left: 12%;
+
 }
 .banner_2_background
 {
