--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -759,7 +759,7 @@ select option
 .wishlist_text a
 {
 	font-size: 18px;
-	font-weight: 400;
+	font-weight: 600;
 	color: #000000;
 	-webkit-transition: all 200ms ease;
 	-moz-transition: all 200ms ease;
@@ -839,7 +839,7 @@ select option
 }
 .main_nav
 {
-	width: 80%;
+	width: 100%;
 	border-top: solid 1px #f2f2f2;
 	box-shadow: 0px 5px 20px rgba(0,0,0,0.1);
 	background: #FFFFFF;
@@ -1004,9 +1004,9 @@ select option
 }
 .main_nav_dropdown li a
 {
-	font-size: 18px;
+	font-size: 17px;
 	font-weight: 400;
-	color: #a19a9a;
+	color: #696464;
 	line-height: 60px;
 }
 .main_nav_dropdown li li
@@ -2180,7 +2180,7 @@ select option
 {
 	position: absolute;
 	bottom: 40px;
-	left: calc((100% - 1170px) / 2 + 15px);
+	left: calc((100% - 170px) / 2 + 15px);
 	z-index: 1000000;
 }
 .banner_2_dots .owl-dot
