--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -2745,7 +2745,7 @@ select option
 .adverts
 {
 	width: 100%;
-	padding-top: 80px;
+/*	padding-top: 80px;*/
 	padding-bottom: 80px;
 }
 .advert
@@ -2753,7 +2753,8 @@ select option
 	width: 100%;
 	height: 180px;
 	border: solid 1px #e8e8e8;
-	box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+/*	box-shadow: 0px 1px 5px rgba(0,0,0,0.1);*/
+    background-color: #fff;
 }
 .advert_content
 {
@@ -2786,11 +2787,16 @@ select option
 {
 	opacity: 0.8;
 }
+.advert_col
+{
+	padding-bottom: 15px;
+}
 .advert_text
 {
 	color: #828282;
 	margin-top: 10px;
     width: 90%;
+    font-size: 20px;
 }
 .advert_text_index4
 {
